manifests/nginx_tv_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tv-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-tv-svc
  template:
    metadata:
      labels:
        app: nginx-tv-svc
    spec:
      nodeSelector:
        my-label-key: aks-defaultpool-63129824-vmss000001
      containers:
        - name: nginx-tv-alpine
          image: acrprod0327.azurecr.io/production/nginx-tv-alpine
          ports:
          - containerPort: 80
