manifests/nginx_web_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-web-svc
  template:
    metadata:
      labels:
        app: nginx-web-svc
    spec:
      containers:
        - name: nginx-web-alpine
          image: acrprod0327.azurecr.io/production/nginx-web-alpine
          ports:
          - containerPort: 80
