manifests/spring_tv_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-tv-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-tv-svc
  template:
    metadata:
      labels:
        app: spring-tv-svc
    spec:
      nodeSelector:
        my-label-key: aks-defaultpool-63129824-vmss000001
      containers:
        - name: spring-tv-app
          image: acrprod0327.azurecr.io/production/spring-tv-app
          ports:
          - containerPort: 8080
