manifests/spring_web_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-web-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-web-svc
  template:
    metadata:
      labels:
        app: spring-web-svc
    spec:
      nodeSelector:
        my-label-key: aks-defaultpool-63129824-vmss000000
      containers:
        - name: spring-web-app
          image: acrprod0327.azurecr.io/production/spring-web-app
          ports:
          - containerPort: 8080
