manifests/nginx_web_service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-svc
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: nginx-web-svc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
