manifests/spring_tv_service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-tv-svc
spec:
  selector:
    app: spring-tv-svc
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
