manifests/spring_web_service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-web-svc
spec:
  selector:
    app: spring-web-svc
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
