manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patron-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
    - hosts:
      - dev.patron.digital
      secretName: patron-auth
  rules:
  - host: dev.patron.digital
    http:
      paths:
      - backend:
          service:
            name: nginx-web-svc
            port:
              number: 80
  tls:
    - hosts:
      - dev.tvpatron.com
      secretName: patron-auth
  rules:
  - hosts: dev.tvpatron.com
    http:
      paths:
      - backend:
          service:
            name: nginx-tv-svc
            port:
              number: 80
